# LexDDO

./: README.md  main.py  pyproject.toml  sample_config.py
deprecated/: fetch_all_entries.py
models/: ddo_entry.py  enums.py  idiom_entry.py  main_entry.py
