[tool.poetry]
name = "lexddo"
version = "0.1.0"
description = "Script to add external identifiers for https://ordnet.dk/ddo to Danish lexemes in Wikidata."
authors = ["Dennis Priskorn"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pydantic = "^2.5.3"
wikibaseintegrator = "^0.12.4"
lxml = "^5.0.0"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
